# escw-mcu-stm32

./: .gitignore  .onedev-buildspec.yml  Cargo.toml  README.md  rustfmt.toml
src/: lib.rs
src/hal/: flash.rs  i2c.rs  io.rs  iwdg.rs  mod.rs  spi.rs  uart.rs  wwdg.rs
src/memory/: mod.rs  stm32f4.rs
src/peripheral/: flash.rs  i2c.rs  io.rs  iwdg.rs  mod.rs  spi.rs  uart.rs  wwdg.rs
src/peripheral/io/: io_pin.rs  io_port.rs
src/peripheral/uart/: uart_event.rs
