[package]
name = "escw-mcu-stm32"
version = "0.1.0"
edition = "2021"
authors = ["Khose-ie<hyklose@outlook.com>"]
description = "Embedded software C wrapper of STM32."
license = "GPL-2.0"
repository = "https://github.com/khose-ie/escw-mcu-stm32"
homepage = "https://github.com/khose-ie/escw-mcu-stm32"


[lib]
name = "escw_mcu_stm32"
test = false
bench = false

[dependencies]
# escw-mcu = "0.1.0"
escw-mcu = { path = "../escw-mcu" }
# spin = "0.9.8"

[features]
stm32f407xx = []
i2c1 = ["escw-mcu/i2c"]
i2c2 = ["escw-mcu/i2c"]
i2c3 = ["escw-mcu/i2c"]
spi1 = ["escw-mcu/spi"]
spi2 = ["escw-mcu/spi"]
spi3 = ["escw-mcu/spi"]
spi4 = ["escw-mcu/spi"]
spi5 = ["escw-mcu/spi"]
spi6 = ["escw-mcu/spi"]
iwdg = ["escw-mcu/wdt"]
wwdg = ["escw-mcu/wdt"]
flash = ["escw-mcu/flash"]
